--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "PDFCreate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/markm7777/PDFCreate.git",
+  "homepage": "https://github.com/markm7777/PDFCreate",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -51,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+   "homepage": "." 
 }
