--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "PDFCreate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/markm7777/PDFCreate",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,6 +10,7 @@
     "ace-builds": "^1.4.12",
     "blob-stream": "^0.1.3",
     "brace": "^0.11.1",
+    "emailjs-com": "^2.6.3",
     "node-sass": "^4.14.1",
     "pdfkit": "^0.10.0",
     "react": "^16.13.1",
@@ -51,6 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-   "homepage": "." 
+  }
 }
